navbar categorie and supplier works